hphp/hack/test/typecheck/defined/superglobals.php.exp
File "superglobals.php", line 4, characters 8-15:
Variable $_SERVER is undefined, or there exists at least one control flow path reaching this point which does not define $_SERVER. (Naming[2050])
